# scorecard

./: .env.vercel  .gitignore  CADDIE_EXPERIENCE.md  CLAUDE.md  NORTHSTAR.md  ONCOURSE_READINESS.md  OWNER_SETUP.md  README.md  VOICE_PARSING_DESIGN.md  backlog-archive.json  backlog.json  package-lock.json  package.json  scratchpad_pr_body.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py  storage.py
backend/ci_scripts/: scoping_lint.py
backend/data/: booking_capabilities_seed.json  foreup_ny_seed.json  private_clubs.json
backend/migrations/: env.py
backend/scripts/: audit_course_coverage.py  audit_tee_selector.py  backfill_core_data.py  backfill_player_profiles.py  coverage_flywheel.py  diag_bethpage.py  diag_red9_waste.py  diag_red_bunkers.py  ingest_osm_course.py  probe_booking_capability.py  regen_rejected_guides.py  tree_detect_spike.py  tree_osm_compare.py  tree_spike_geometry.py  validate_foreup_courses.py  verify_mapped_courses.sh
backend/tests/: test_aim_point.py  test_air_density.py  test_approach_frame.py  test_availability_call_cache.py  test_availability_call_route.py  test_bag_caddie_grounding_unit.py  test_bethpage_validation.py  test_caddie_caching.py  test_caddie_log_lines.py  test_caddie_persona_inventory.py  test_caddie_register_consistency.py  test_caddie_tool_loop.py  test_caddie_tools.py  test_caller_voice.py  test_clerk_auth.py  test_clerk_jwt_parity.py  test_club_alias_p0.py  test_club_hybrid_alias.py  test_club_selection.py  test_competition_legal.py  test_course_guides.py  (+112 more)
(+971 files in other folders)
